fix: :zap: add frontend url on envirioment variable